// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFbt When using string templates should extract correctly multiple params 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 86,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "counting",
          "text": "{1} {2} {2} 3",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 119,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          null,
          null,
        ],
        "t": {
          "*": {
            "*": {
              "*": {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": {
              "*": {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": {
              "*": {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly supports tables ie fbt:enum 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 37,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          null,
        ],
        "t": {
          "0": {
            "desc": "counting",
            "text": "a {2} {2} 3",
          },
          "1": {
            "desc": "counting",
            "text": "b {2} {2} 3",
          },
        },
      },
      "line_beg": 3,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with a param 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 52,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "great",
          "text": "testing {it} works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with just string contents 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 19,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "ok",
          "text": "simple",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with the param being first 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 49,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "well",
          "text": "{it} still works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes when needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "node": Node {
              "attributes": [
                Node {
                  "end": 121,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 36,
                      "index": 121,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 15,
                      "index": 100,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 109,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 24,
                        "index": 109,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 15,
                        "index": 100,
                        "line": 4,
                      },
                    },
                    "name": "className",
                    "start": 100,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 100,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 121,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 36,
                        "index": 121,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 25,
                        "index": 110,
                        "line": 4,
                      },
                    },
                    "start": 110,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Node {
                  "end": 153,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 68,
                      "index": 153,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 37,
                      "index": 122,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 126,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 41,
                        "index": 126,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 37,
                        "index": 122,
                        "line": 4,
                      },
                    },
                    "name": "href",
                    "start": 122,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 122,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 153,
                    "extra": {
                      "raw": ""https://somewhere.random"",
                      "rawValue": "https://somewhere.random",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 68,
                        "index": 153,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 42,
                        "index": 127,
                        "line": 4,
                      },
                    },
                    "start": 127,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "https://somewhere.random",
                  },
                },
                Node {
                  "end": 168,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 83,
                      "index": 168,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 69,
                      "index": 154,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 162,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 77,
                        "index": 162,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 69,
                        "index": 154,
                        "line": 4,
                      },
                    },
                    "name": "tabindex",
                    "start": 154,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 154,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 168,
                    "expression": Node {
                      "end": 167,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 82,
                          "index": 167,
                          "line": 4,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 79,
                          "index": 164,
                          "line": 4,
                        },
                      },
                      "start": 164,
                      "trailingComments": undefined,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 83,
                        "index": 168,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 78,
                        "index": 163,
                        "line": 4,
                      },
                    },
                    "start": 163,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
                Node {
                  "end": 180,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 95,
                      "index": 180,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 84,
                      "index": 169,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 171,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 86,
                        "index": 171,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 84,
                        "index": 169,
                        "line": 4,
                      },
                    },
                    "name": "id",
                    "start": 169,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 169,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 180,
                    "expression": Node {
                      "end": 179,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 94,
                          "index": 179,
                          "line": 4,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 88,
                          "index": 173,
                          "line": 4,
                        },
                      },
                      "start": 173,
                      "trailingComments": undefined,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 95,
                        "index": 180,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 87,
                        "index": 172,
                        "line": 4,
                      },
                    },
                    "start": 172,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 181,
              "innerComments": undefined,
              "leadingComments": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 96,
                  "index": 181,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 12,
                  "index": 97,
                  "line": 4,
                },
              },
              "name": Node {
                "end": 99,
                "innerComments": undefined,
                "leadingComments": undefined,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 14,
                    "index": 99,
                    "line": 4,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 13,
                    "index": 98,
                    "line": 4,
                  },
                },
                "name": "a",
                "start": 98,
                "trailingComments": undefined,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 97,
              "trailingComments": undefined,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "https://somewhere.random",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "col_beg": 10,
      "col_end": 16,
      "filepath": "test.js",
      "hashToLeaf": {
        "6CzFRF22gqmcMT9hNd4lFQ==": {
          "desc": "some desc",
          "text": "This is a {=link}",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 7,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 16,
      "filepath": "test.js",
      "hashToLeaf": {
        "vInz7SvwK8Zthis7azxV9Q==": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "line_beg": 4,
      "line_end": 6,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes where there are two nested React elements 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "param",
        },
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
            {
              "children": [
                {
                  "type": "text",
                },
                {
                  "type": "plural",
                },
                {
                  "type": "text",
                },
              ],
              "phraseIndex": 2,
              "type": "implicitParam",
              "wrapperNode": {
                "node": Node {
                  "attributes": [],
                  "end": 322,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 20,
                      "index": 322,
                      "line": 8,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 314,
                      "line": 8,
                    },
                  },
                  "name": Node {
                    "end": 321,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 19,
                        "index": 321,
                        "line": 8,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 315,
                        "line": 8,
                      },
                    },
                    "name": "strong",
                    "start": 315,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 314,
                  "trailingComments": undefined,
                  "type": "JSXOpeningElement",
                },
                "props": {},
                "type": "strong",
              },
            },
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "node": Node {
              "attributes": [
                Node {
                  "end": 264,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 34,
                      "index": 264,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 13,
                      "index": 243,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 252,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 22,
                        "index": 252,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 243,
                        "line": 7,
                      },
                    },
                    "name": "className",
                    "start": 243,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 243,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 264,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 34,
                        "index": 264,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 23,
                        "index": 253,
                        "line": 7,
                      },
                    },
                    "start": 253,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Node {
                  "end": 273,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 43,
                      "index": 273,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 35,
                      "index": 265,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 269,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 39,
                        "index": 269,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 35,
                        "index": 265,
                        "line": 7,
                      },
                    },
                    "name": "href",
                    "start": 265,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 265,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 273,
                    "extra": {
                      "raw": ""#"",
                      "rawValue": "#",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 43,
                        "index": 273,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 40,
                        "index": 270,
                        "line": 7,
                      },
                    },
                    "start": 270,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "#",
                  },
                },
                Node {
                  "end": 288,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 58,
                      "index": 288,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 44,
                      "index": 274,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 282,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 52,
                        "index": 282,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 44,
                        "index": 274,
                        "line": 7,
                      },
                    },
                    "name": "tabindex",
                    "start": 274,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 274,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 288,
                    "expression": Node {
                      "end": 287,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 57,
                          "index": 287,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 54,
                          "index": 284,
                          "line": 7,
                        },
                      },
                      "start": 284,
                      "trailingComments": undefined,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 58,
                        "index": 288,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 53,
                        "index": 283,
                        "line": 7,
                      },
                    },
                    "start": 283,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
                Node {
                  "end": 300,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 70,
                      "index": 300,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 59,
                      "index": 289,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 291,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 61,
                        "index": 291,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 59,
                        "index": 289,
                        "line": 7,
                      },
                    },
                    "name": "id",
                    "start": 289,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 289,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 300,
                    "expression": Node {
                      "end": 299,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 69,
                          "index": 299,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 63,
                          "index": 293,
                          "line": 7,
                        },
                      },
                      "start": 293,
                      "trailingComments": undefined,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 70,
                        "index": 300,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 62,
                        "index": 292,
                        "line": 7,
                      },
                    },
                    "start": 292,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 301,
              "innerComments": undefined,
              "leadingComments": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 71,
                  "index": 301,
                  "line": 7,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 240,
                  "line": 7,
                },
              },
              "name": Node {
                "end": 242,
                "innerComments": undefined,
                "leadingComments": undefined,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 12,
                    "index": 242,
                    "line": 7,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 11,
                    "index": 241,
                    "line": 7,
                  },
                },
                "name": "a",
                "start": 241,
                "trailingComments": undefined,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 240,
              "trailingComments": undefined,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "#",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
        {
          "type": "text",
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "hashToLeaf": {
        "PqPPir8Kg9xSlqdednPFOg==": {
          "desc": "example 1",
          "text": "{name} has shared {=a photo} with you",
        },
        "gVKMc/8jq5vnYR5v2bb32g==": {
          "desc": "example 1",
          "text": "{name} has shared {=[number] photos} with you",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "example 1",
              "text": "{name} has shared {=[number] photos} with you",
              "tokenAliases": {
                "=[number] photos": "=m2",
              },
            },
            "_1": {
              "desc": "example 1",
              "text": "{name} has shared {=a photo} with you",
              "tokenAliases": {
                "=a photo": "=m2",
              },
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 18,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 14,
      "filepath": "test.js",
      "hashToLeaf": {
        "2u1unDTClahYJKZKS5RVCQ==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{=[number] photos}",
        },
        "dO3IlAx8hzcJVQxeQOUhkg==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "{=a photo}",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{=[number] photos}",
              "tokenAliases": {
                "=[number] photos": "=m1",
              },
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "{=a photo}",
              "tokenAliases": {
                "=a photo": "=m1",
              },
            },
          },
        },
      },
      "line_beg": 7,
      "line_end": 16,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 21,
      "filepath": "test.js",
      "hashToLeaf": {
        "Q9mOAQ+ogHG20z2QkEkNmQ==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "a photo",
        },
        "tYYOLLMbffdJQQlSVEVv/A==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{number} photos",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{number} photos",
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "a photo",
            },
          },
        },
      },
      "line_beg": 8,
      "line_end": 15,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should create correct child parent mapping for multiple files 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
    "4": 3,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=bold with italic inside}.",
          "tokenAliases": {
            "=bold with italic inside": "=m2",
          },
        },
      },
      "line_beg": 3,
      "line_end": 8,
      "project": "",
    },
    {
      "col_beg": 14,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=bold with italic inside}."",
          "text": "bold with {=italic inside}",
          "tokenAliases": {
            "=italic inside": "=m1",
          },
        },
      },
      "line_beg": 5,
      "line_end": 7,
      "project": "",
    },
    {
      "col_beg": 26,
      "col_end": 46,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a bold with {=italic inside}."",
          "text": "italic inside",
        },
      },
      "line_beg": 6,
      "line_end": 6,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "Link: {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 3,
      "line_end": 6,
      "project": "",
    },
    {
      "col_beg": 14,
      "col_end": 57,
      "filepath": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Link: {=link}"",
          "text": "link",
        },
      },
      "line_beg": 5,
      "line_end": 5,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should dedupe fbt:plurals 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 6,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          null,
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "desc...",
              "text": "There are {number} photos.",
            },
          },
          "_1": {
            "_1": {
              "desc": "desc...",
              "text": "There is 1 photo.",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 9,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the outer token names if needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Expose outer token name when script option is given",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 22,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "outerTokenName": "=World",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the subject option on top level and inner phrases 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "expose subject",
            "text": "You {=see the world}",
            "tokenAliases": {
              "=see the world": "=m1",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
      "subject": Node {
        "end": 82,
        "innerComments": undefined,
        "leadingComments": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 52,
            "index": 82,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": "aSubject",
          "start": Position {
            "column": 44,
            "index": 74,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 74,
        "trailingComments": undefined,
        "type": "Identifier",
      },
    },
    {
      "col_beg": 10,
      "col_end": 30,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "In the phrase: "You {=see the world}"",
            "text": "see the world",
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
      "subject": Node {
        "end": 82,
        "innerComments": undefined,
        "leadingComments": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 52,
            "index": 82,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": "aSubject",
          "start": Position {
            "column": 44,
            "index": 74,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 74,
        "trailingComments": undefined,
        "type": "Identifier",
      },
    },
  ],
}
`;

exports[`collectFbt should extract common strings from <fbt common={true}> 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 6,
      "col_end": 39,
      "common": true,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbs strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 27,
      "col_end": 52,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 27,
      "col_end": 52,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt.c strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 6,
      "col_end": 23,
      "common": true,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings from a custom collector 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "description",
          "text": "Hello {=World}!",
          "tokenAliases": {},
        },
      },
      "line_beg": 3,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 16,
      "col_end": 38,
      "filepath": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}!"",
          "outerTokenName": "=World",
          "text": "World",
          "tokenAliases": {},
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract the author from Docblock 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "author": "Sponge Bob",
      "col_beg": 0,
      "col_end": 25,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should not expose the outer token names by default 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Do not expose outer token name by default",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 22,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if fbt call param doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 40,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if file-level doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 25,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if in-line doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 46,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;
